added jvm parameters to readme