@@ -2,3 +2,5 @@ BeeHive
 =======
 
 Bee population simulation using Tortuga.
+
+Config on my Windows machine: -Xmx1200m -Xss6k -XX:MaxPermSize=8m
